--- a/manager/templates/buy.html
+++ b/manager/templates/buy.html
@@ -10,6 +10,16 @@
     <title>dashboard</title>
 <style>
 
+  h3{
+font-size: 13px;
+font-weight: 500;
+text-transform: uppercase;
+letter-spacing: 4px;
+line-height: 3em;
+padding-left: 0.25em;
+color: rgba(0, 0, 0, 0.4);
+padding-bottom: 10px;
+}
   .topnav .search-container {
   float: right;
 }
@@ -74,20 +84,39 @@
       </ul>
     </div>
   </nav>
-  <div class="container d-flex justify-content-center" style="margin-top: 10%;">
-    <div class="topnav">
-        <div class="search-container">
-            <form action="" method="POST">
-                {% csrf_token %}
-              <input type="text" placeholder="Search.." name="search">
-              <button type="submit"><i class="fa fa-search"></i></button>
-            </form>
-          </div>
+  <div class="container d-flex justify-content-center" style="margin-top: 5%; "> 
+  <div class="topnav">
+    <div class="search-container justify-content-center form-inline">
+        <form class="form-group" action="" method="POST">
+            {% csrf_token %}
+          <input type="text" class="form-control" placeholder="Search currency by name" name="search">
+          <button type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+            <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+          </svg></button>
+        </form>
       </div>
-    </div>
-      <div style="width:1500;height:500">
+
+  </div>
+  </div>
+ <br>
+ {% if graph %}
+  <div class="container d-flex justify-content-center" style="margin-top: 2%;"> 
+    <div class="card" style="border-width: 2px; border-color: brown;">
+    <div class="card-body">      
       {{ graph|safe }}
       </div>
+      <div class="card-footer">
+        <a href="#"><button type="button" class="flex btn btn-outline" style="border-width: 2px; border-color: brown;" >Buy</button></a>
+     </div>
+    </div>
+    </div>
+  
+     {% else %}
+     <div class="container d-flex justify-content-center" style="margin-top: 10%;">
+      <div class="card text-center" style="background-color: rgba(255, 255, 255, 0.438); width: fit-content;">
+      <div class="card-header heading" style="background:transparent !important;"><h1>Stonk it up!</h1></div>
+      <div class="card-body" style="background-color: rgba(255, 255, 255, 0.774);"><h3><b>Welcome! Manage your portfolio with us.<br> Always stay up to date with the market!</b></h3></div></div></div>
+      {% endif %}
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
