--- a/manager/templates/buyform.html
+++ b/manager/templates/buyform.html
@@ -91,7 +91,8 @@ padding-bottom: 10px;
         
         <div class="card-body">           
          
-           amount= {{ amt }}    
+           amount= {{ amt }}
+           total = {{ total_coins }}
       
       </div>
       <div class="card-footer">
