--- a/manager/templates/homepage.html
+++ b/manager/templates/homepage.html
@@ -21,7 +21,13 @@ padding-bottom: 10px;
 </style>
   </head>
   <body>   
-  
+    {% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+        <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
   <div class="container d-flex justify-content-center" style="margin-top: 10%;">
 <div class="card text-center" style="background-color: rgba(255, 255, 255, 0.438); width: fit-content;">
 <div class="card-header heading" style="background:transparent !important;"><h1>Stonk it up!</h1></div>
