--- a/manager/templates/login.html
+++ b/manager/templates/login.html
@@ -12,6 +12,16 @@
     <title>login</title>
   </head>
   <body>
+    {% for message in messages %}
+    <div class="container-fluid p-0">
+      <div class="alert {{ message.tags }} alert-dismissible" role="alert" >
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="True">&times;</span>
+        </button>
+        {{ message }}
+      </div>
+    </div>
+    {% endfor %}
     <div class="container d-flex justify-content-center" style="margin-top: 10%;">
 <div class="card" style="background-color: rgba(255, 255, 255, 0.384);">
   <div class="card-header heading" style="background:transparent !important;">
