--- a/manager/static/style.css
+++ b/manager/static/style.css
@@ -2,7 +2,7 @@
     font-family: "Raleway", sans-serif;
   }
 body{
-    background-image: url('https://p7014794.vo.llnwd.net/e1/media/catalog/product/cache/8a7c6b25d9e0c0695377faf36eecef90/w/o/wooden-pastel-coins.jpg'); background-repeat: no-repeat; background-size: cover; 
+    background-image: url('https://i.pinimg.com/originals/5a/31/34/5a3134e3a25a78714b7552ebedad6ea0.jpg'); background-repeat: no-repeat; background-size: cover; 
     
 }
   h1 {
