--- a/manager/templates/sellform.html
+++ b/manager/templates/sellform.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Buy</title>
+    <title>confirmpurchase</title>
 <style>
 
   h3{
@@ -59,18 +59,12 @@ padding-bottom: 10px;
     padding: 14px;
   }
   .topnav input[type=text] {
-    border: 1px solid #ccc;  
+    border: 1px solid #ccc;
   }}
 </style>
   </head>
-  <body>   
-{% if messages %}
-<ul class="messages">
-    {% for message in messages %}
-    <li>{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-    {% endfor %}
-</ul>
-{% endif %}
+  <body>
+
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <a class="navbar-brand">FinEazy</a>
     <button class="navbar-toggler" data-target="#my-nav" data-toggle="collapse" aria-controls="my-nav" aria-expanded="false" aria-label="Toggle navigation">
@@ -79,9 +73,9 @@ padding-bottom: 10px;
     <div id="my-nav" class="collapse navbar-collapse">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="{% url 'dashboard' %}">Your stocks</a>
+          <a class="nav-link" href="{% url 'dashboard' %}">Your stocks</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item active">
           <a class="nav-link" href="{% url 'buy' %}" tabindex="-1" aria-disabled="true">Buy</a>
         </li>
         <li class="nav-item">
@@ -91,32 +85,50 @@ padding-bottom: 10px;
     </div>
   </nav>
 
- <br>
- {% if graph %}
-  <div class="container d-flex justify-content-center" style="margin-top: 10%;"> 
-    <div class="card" style="border-width: 2px; border-color: brown;">
-    <div class="card-body">      
-      {{ graph|safe }}
-      </div>
-      <div class="card-footer">
-        <form class="form-group" action="" method="POST">
-          {% csrf_token %}
-        <input type="number" class="form-control" placeholder="Number of coins you want to sell" name="sellform"><br>
-        <a href="{% url 'sellform' %}"><button type="submit" class="flex btn btn-outline" style="border-width: 2px; border-color: brown;" >Sell</button></a>
 
-      </form>
-     </div>
+  <div class="container d-flex justify-content-center" style="margin-top: 5%;">
+    <div class="card" style="border-width: 2px; border-color: brown; ">
+        <div class="card-header"><h1>Purchase Summary</h1></div>
+        <div class="card-body d-flex justify-content-center ">
+            <table class="table-sm table-hover">
+
+                <tbody>
+                  <tr>
+                    <th scope="row">Date</th>
+                    <td>{{ date }}</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Currency</th>
+                    <td>{{ name }}</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Price per coin</th>
+                    <td>{{ pcp }}</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Number of coins</th>
+                    <td>{{ total_coins }}</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Amount due</th>
+                    <td>{{ amt }}</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Total money</th>
+                    <td>{{ total_money }}</td>
+                  </tr>
+                </tbody>
+              </table>
+      </div>
+      <div class="card-footer d-flex justify-content-center">
+        <a href='{% url "dashboard" %}'><button class="btn btn-outline-danger" style="border-width: 2px;" type="submit">Cancel</button></a>
+        <form method="POST" action='{% url "sellform" %}'>
+          {% csrf_token %}
+        <a href="" style= "margin-left: 5%;" ><input class="btn btn-outline" style="border-width: 2px; border-color: brown;" type="submit" value="Confirm"></a>
+    </form>
     </div>
     </div>
-  
-     {% else %}
-     <div class="container d-flex justify-content-center" style="margin-top: 10%;">
-      <div class="card text-center" style="background-color: rgba(255, 255, 255, 0.438); width: fit-content;">
-      <div class="card-header heading" style="background:transparent !important;"><h1>Stonk it up!</h1></div>
-      <div class="card-body" style="background-color: rgba(255, 255, 255, 0.774);"><h3><b>Welcome! Manage your portfolio with us.<br> Always stay up to date with the market!</b></h3></div></div></div>
-      {% endif %}
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+    </div>
+
+    </body>
 </html>
