--- a/manager/templates/buy.html
+++ b/manager/templates/buy.html
@@ -82,6 +82,11 @@ padding-bottom: 10px;
           <a class="nav-link" href="{% url 'goal' %}" tabindex="-2" aria-disabled="true">Set a Goal</a>
         </li>
       </ul>
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'logout' %}" tabindex="-3" aria-disabled="true" style="color: brown;"><b>Logout</b></a>
+        </li>
+      </ul>
     </div>
   </nav>
   <div class="container d-flex justify-content-center" style="margin-top: 5%; "> 
