--- a/manager/templates/dashboard.html
+++ b/manager/templates/dashboard.html
@@ -21,7 +21,7 @@
   </div>
   {% endfor %}
   <div class="container d-flex justify-content-center" style="margin-top: 10%;">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+  <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
     <a class="navbar-brand">FinEazy</a>
     <button class="navbar-toggler" data-target="#my-nav" data-toggle="collapse" aria-controls="my-nav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -38,10 +38,15 @@
           <a class="nav-link" href="{% url 'goal' %}" tabindex="-2" aria-disabled="true">Set a Goal</a>
         </li>
       </ul>
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'logout' %}" tabindex="-3" aria-disabled="true" style="color: brown;"><b>Logout</b></a>
+        </li>
+      </ul>
     </div>
   </nav>
-
-  <div class="list-group">
+ 
+  <div class="list-group list-group-flush" style="padding: 2%;">
     {% for s in stocks %}
     <a href="{% url 'sell' s.name %}" class="list-group-item list-group-item-action flex-column align-items-start">
       <div class="d-flex w-100 justify-content-between">
@@ -54,6 +59,7 @@
     {% endfor %}
   </div>
     </div>
+  
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
