set goal form added

--- a/manager/templates/goal.html
+++ b/manager/templates/goal.html
@@ -36,6 +36,13 @@
       </ul>
     </div>
   </nav>
+  <form class="form-group" method="POST">
+{% csrf_token %}
+<label for="returns">Percentage Returns</label>
+    <input type="number" class="form-control" id="returns" placeholder="Percentage returns" name="returns">
+    <label for="time">Time period</label>
+    <input type="number" class="form-control" id="time" placeholder="Time in weeks" name="time"> 
+  </form>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
