--- a/manager/templates/buy.html
+++ b/manager/templates/buy.html
@@ -105,10 +105,12 @@ padding-bottom: 10px;
   </div>
  <br>
  {% if graph %}
-  <div class="container d-flex justify-content-center" style="margin-top: 2%;"> 
+  <div class="container d-flex justify-content-center"> 
     <div class="card" style="border-width: 2px; border-color: brown;">
-    <div class="card-body">      
-      {{ graph|safe }}
+    <div class="card-body d-flex justify-content-center">   
+      {% for g in graph %}  
+      <div style="border-style:solid; border-color: black; border-width: 0.5px; margin: 0.5%;">{{ g|safe }}</div>
+      {% endfor %}
       </div>
       <div class="card-footer">
         <form class="form-group" action="" method="POST">
