--- a/manager/templates/buyform.html
+++ b/manager/templates/buyform.html
@@ -125,12 +125,11 @@ padding-bottom: 10px;
                 </tbody>
               </table>      
       </div>
-      <div class="card-footer d-flex justify-content-center">
-        <form method="POST" action='{% url "buyform" %}'>
+      <div class="card-footer d-flex">
+        <a href='{% url "dashboard" %}' class="mr-auto"><button class="btn btn-outline-danger" style="border-width: 2px;" type="submit">Cancel</button></a>
+        <form method="POST" action='{% url "buyform" %}' class="ml-auto">
           {% csrf_token %}
-        <a href='{% url "dashboard" %}'><button class="btn btn-outline-danger" style="border-width: 2px;" type="submit">Cancel</button></a>
-
-        <a href="" style="margin-left: 5%;"><input class="btn btn-outline" style="border-width: 2px; border-color: brown;" type="submit" value="Confirm"></a>
+        <a href=""><input class="btn btn-outline-info" style="border-width: 2px; border-color: brown;" type="submit" value="Confirm"></a>
     </form> 
     </div>
     </div>
