--- a/manager/templates/sell.html
+++ b/manager/templates/sell.html
@@ -98,11 +98,13 @@ padding-bottom: 10px;
 
  <br>
  {% if graph %}
-  <div class="container d-flex justify-content-center" style="margin-top: 10%;"> 
+  <div class="container d-flex justify-content-center" style="margin-top: 5%;"> 
     <div class="card" style="border-width: 2px; border-color: brown;">
-    <div class="card-body">      
-      {{ graph|safe }}
-      </div>
+      <div class="card-body d-flex justify-content-center">   
+        {% for g in graph %}  
+        <div style="border-style:solid; border-color: black; border-width: 0.5px; margin: 0.5%;">{{ g|safe }}</div>
+        {% endfor %}
+        </div>
       <div class="card-footer">
         <form class="form-group" action="" method="POST">
           {% csrf_token %}
