--- a/manager/templates/dashboard.html
+++ b/manager/templates/dashboard.html
@@ -53,7 +53,7 @@
         <h5 class="mb-1">{{ s.name }}</h5>
         <small>{{ s.dob }}</small>
       </div>
-      <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+      <p class="mb-1">................................................................................................</p>
       <small>Total coins: {{ s.total_coins_bought }}</small>
     </a>
     {% endfor %}
