--- a/manager/templates/buy.html
+++ b/manager/templates/buy.html
@@ -125,6 +125,9 @@ padding-bottom: 10px;
     </div>
   
      {% else %}
+     {% if err %}
+     <div class="well d-flex justify-content-center">{{ err }}</div>
+    {% endif %}
      <div class="container d-flex justify-content-center" style="margin-top: 10%;">
       <div class="card text-center" style="background-color: rgba(255, 255, 255, 0.438); width: fit-content;">
       <div class="card-header heading" style="background:transparent !important;"><h1>Stonk it up!</h1></div>
