--- a/manager/templates/list.html
+++ b/manager/templates/list.html
@@ -49,8 +49,12 @@
   <div class="list-group list-group-flush" style="padding: 2%;">
     {% for s in stocks %}
     <a href="{% url 'goalbuy' s %}" class="list-group-item list-group-item-action flex-column align-items-start">
-      <div class="d-flex w-100 justify-content-between">
-        <h5 class="mb-1">{{ s }}</h5>
+        <div class="d-flex w-100 justify-content-between">
+            <h5 class="mb-1">{{ s }}</h5>
+            <small class="badge rounded-pill bg-light" style="color: black;">   #{{ forloop.counter }}   </small>
+          </div>
+          <p class="mb-1">................................................................................................</p>
+          <small>..........</small>
     </a>
     {% endfor %}
   </div>
