--- a/manager/templates/buy.html
+++ b/manager/templates/buy.html
@@ -95,9 +95,7 @@ padding-bottom: 10px;
         <form class="form-group" action="" method="POST">
             {% csrf_token %}
           <input type="text" class="form-control" placeholder="Search currency by name" name="search" required>
-          <button type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="" class="bi bi-search" viewBox="0 0 16 16">
-            <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
-          </svg></button>
+          <button class="btn bg-transparent" type="submit">🔍</button>
         </form>
       </div>
 
@@ -107,9 +105,9 @@ padding-bottom: 10px;
  {% if graph %}
   <div class="container d-flex justify-content-center"> 
     <div class="card" style="border-width: 2px; border-color: brown;">
-    <div class="card-body d-lg-inline-flex justify-content-center">   
+    <div class="card-body justify-content-center">   
       {% for g in graph %}  
-      <div style="border-style:solid; border-color: black; border-width: 0.5px; margin: 0.5%;">{{ g|safe }}</div>
+      <div style="margin: 0.5%; float:left">{{ g|safe }}</div>
       {% endfor %}
       </div>
       <div class="card-footer">
