--- a/manager/templates/sellform.html
+++ b/manager/templates/sellform.html
@@ -88,7 +88,7 @@ padding-bottom: 10px;
 
   <div class="container d-flex justify-content-center" style="margin-top: 5%;">
     <div class="card" style="border-width: 2px; border-color: brown; ">
-        <div class="card-header"><h1>Purchase Summary</h1></div>
+        <div class="card-header"><h1>Summary</h1></div>
         <div class="card-body d-flex justify-content-center ">
             <table class="table-sm table-hover">
 
