added alert and graph in sell form changed background

--- a/manager/static/style.css
+++ b/manager/static/style.css
@@ -2,7 +2,7 @@
     font-family: "Raleway", sans-serif;
   }
 body{
-    background-image: url('https://i.pinimg.com/originals/5a/31/34/5a3134e3a25a78714b7552ebedad6ea0.jpg'); background-repeat: no-repeat; background-size: cover; 
+    background-image: url('https://img.rawpixel.com/s3fs-private/rawpixel_images/website_content/v317-tang-98-womanblogger_2.jpg?w=1200&h=1200&dpr=1&fit=clip&crop=default&fm=jpg&q=75&vib=3&con=3&usm=15&cs=srgb&bg=F4F4F3&ixlib=js-2.2.1&s=cc6950a7edc0998c1a61223816d0901a'); background-repeat:repeat; background-size:auto; 
     
 }
   h1 {
