--- a/manager/templates/buy.html
+++ b/manager/templates/buy.html
@@ -100,6 +100,9 @@ padding-bottom: 10px;
       </div>
 
   </div>
+  {% if err %}
+  <div class="alert alert-warning"><strong>{{ err }}</strong></div>
+ {% endif %}
   </div>
  <br>
  {% if graph %}
@@ -123,10 +126,7 @@ padding-bottom: 10px;
     </div>
   
      {% else %}
-     {% if err %}
-     <div class="well d-flex justify-content-center">{{ err }}</div>
-    {% endif %}
-     <div class="container d-flex justify-content-center" style="margin-top: 10%;">
+     <div class="container d-flex justify-content-center" style="margin-top: 5%;">
       <div class="card text-center" style="background-color: rgba(255, 255, 255, 0.438); width: fit-content;">
       <div class="card-header heading" style="background:transparent !important;"><h1>Stonk it up!</h1></div>
       <div class="card-body" style="background-color: rgba(255, 255, 255, 0.774);"><h3><b>Welcome! Manage your portfolio with us.<br> Always stay up to date with the market!</b></h3></div></div></div>
