--- a/manager/templates/sell.html
+++ b/manager/templates/sell.html
@@ -100,9 +100,9 @@ padding-bottom: 10px;
  {% if graph %}
   <div class="container d-flex justify-content-center" style="margin-top: 5%;"> 
     <div class="card" style="border-width: 2px; border-color: brown;">
-      <div class="card-body d-lg-inline-flex justify-content-center">   
+      <div class="card-body justify-content-center">   
         {% for g in graph %}  
-        <div style="border-style:solid; border-color: black; border-width: 0.5px; margin: 0.5%;">{{ g|safe }}</div>
+        <div style="margin: 0.5%; float:left">{{ g|safe }}</div>
         {% endfor %}
         </div>
       <div class="card-footer">
