--- a/manager/templates/goal.html
+++ b/manager/templates/goal.html
@@ -31,7 +31,7 @@
       </ul>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'logout' %}" tabindex="-3" aria-disabled="true" style="color: brown;"><b>Logout</b></a>
+          <a class="nav-link" href="{% url 'logout' %}" tabindex="-3" aria-disabled="true" style="color: midnightblue;"><b>Logout</b></a>
         </li>
       </ul>
     </div>
@@ -49,7 +49,7 @@
               <br>
               <label for="time" style="color: rgb(19, 71, 105);">Time period</label>
               <input type="number" class="form-control" id="time" placeholder="Time in weeks" name="time" required>
-              <input class="btn btn-outline" style="border-width: 2px; border-color: brown; margin: 5%;" type="submit" value="Set">
+              <input class="btn btn-outline" style="border-width: 2px; border-color: midnightblue; margin: 5%;" type="submit" value="Set">
             </form>
       </div>
     </div>
