--- a/manager/templates/logout.html
+++ b/manager/templates/logout.html
@@ -20,7 +20,7 @@
         <div class="card-body">
          
           <small class="text-muted">
-            <a class="btn btn-outline" href="{% url 'login' %}" style="border-width: 2px; border-color: brown; margin: 5%;">Log In Again</a>
+            <a class="btn btn-outline" href="{% url 'login' %}" style="border-width: 2px; border-color: midnightblue; margin: 5%;">Log In Again</a>
         </small>
         </div>
       </div>
