--- a/manager/templates/register.html
+++ b/manager/templates/register.html
@@ -24,8 +24,8 @@
             <fieldset class="form-group">
                 {{ form|crispy }}
             </fieldset>        
-            <input class="btn btn-outline" style="border-width: 2px; border-color: brown; margin: 5%;" type="submit" value="Register">
-            <p>Already have an account? <a href='{% url "login" %}' style="text-decoration: none; color: brown;">Login</a></p>
+            <input class="btn btn-outline" style="border-width: 2px; border-color: midnightblue; margin: 5%;" type="submit" value="Register">
+            <p>Already have an account? <a href='{% url "login" %}' style="text-decoration: none; color: midnightblue;">Login</a></p>
         </form>
       
         </div>
