--- a/manager/static/style.css
+++ b/manager/static/style.css
@@ -30,7 +30,7 @@ position: absolute;
 bottom: 3px;
 left: 50%;
 margin-left: -14px;
-background-color: #b80000;
+background-color: midnightblue;
 }
 .heading h1:after {
 width: 100px;
@@ -41,6 +41,6 @@ position: relative;
 margin-top: 25px;
 left: 50%;
 margin-left: -50px;
-background-color: #b80000;
+background-color: midnightblue;
 }
 
