--- a/manager/templates/buy.html
+++ b/manager/templates/buy.html
@@ -84,7 +84,7 @@ padding-bottom: 10px;
       </ul>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'logout' %}" tabindex="-3" aria-disabled="true" style="color: brown;"><b>Logout</b></a>
+          <a class="nav-link" href="{% url 'logout' %}" tabindex="-3" aria-disabled="true" style="color:midnightblue;"><b>Logout</b></a>
         </li>
       </ul>
     </div>
@@ -107,7 +107,7 @@ padding-bottom: 10px;
  <br>
  {% if graph %}
   <div class="container d-flex justify-content-center"> 
-    <div class="card" style="border-width: 2px; border-color: brown;">
+    <div class="card" style="border-width: 2px; border-color: midnightblue;">
     <div class="card-body justify-content-center">   
       {% for g in graph %}  
       <div style="margin: 0.5%; float:left">{{ g|safe }}</div>
@@ -118,7 +118,7 @@ padding-bottom: 10px;
           {% csrf_token %}
         <input type="number" class="form-control" placeholder="Amount you want to invest" name="buyform" required>
         <br>
-        <a href="{% url 'buyform' %}"><button type="submit" class="flex btn btn-outline" style="border-width: 2px; border-color: brown;" >Buy</button></a>
+        <a href="{% url 'buyform' %}"><button type="submit" class="flex btn btn-outline" style="border-width: 2px; border-color: midnightblue;" >Buy</button></a>
         
       </form>
      </div>
