--- a/manager/templates/homepage.html
+++ b/manager/templates/homepage.html
@@ -33,8 +33,8 @@ padding-bottom: 10px;
 <div class="card-header heading" style="background:transparent !important;"><h1>Stonk it up!</h1></div>
 <div class="card-body" style="background-color: rgba(255, 255, 255, 0.774);"><h3><b>Welcome! Manage your portfolio with us.<br> Always stay up to date with the market!</b></h3></div>
 <div class="card-footer">
-   <a href="{% url 'login' %}"><button type="button" class="flex btn btn-outline" style="border-width: 2px; border-color: brown; margin: 5%;" >Login</button></a>
-  <a href="{% url 'register' %}"><button type="button" class="flex btn btn-outline" style="border-width: 2px; border-color: brown; margin: 5%;">Sign up</button></a>
+   <a href="{% url 'login' %}"><button type="button" class="flex btn btn-outline" style="border-width: 2px; border-color: midnightblue; margin: 5%;" >Login</button></a>
+  <a href="{% url 'register' %}"><button type="button" class="flex btn btn-outline" style="border-width: 2px; border-color: midnightblue; margin: 5%;">Sign up</button></a>
 </div>
 </div>
   </div>  
