--- a/manager/templates/list.html
+++ b/manager/templates/list.html
@@ -40,7 +40,7 @@
       </ul>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'logout' %}" tabindex="-3" aria-disabled="true" style="color: brown;"><b>Logout</b></a>
+          <a class="nav-link" href="{% url 'logout' %}" tabindex="-3" aria-disabled="true" style="color: midnightblue;"><b>Logout</b></a>
         </li>
       </ul>
     </div>
