--- a/manager/templates/login.html
+++ b/manager/templates/login.html
@@ -33,8 +33,8 @@
       <fieldset class="form-group">
           {{ form|crispy }}
       </fieldset>        
-      <input class="btn btn-outline" style="border-width: 2px; border-color: brown; margin: 5%;" type="submit" value="Login">
-      <p>Do not have an account? <a href='{% url "register" %}' style="text-decoration: none; color: brown;">Register</a></p>
+      <input class="btn btn-outline" style="border-width: 2px; border-color: midnightblue; margin: 5%;" type="submit" value="Login">
+      <p>Do not have an account? <a href='{% url "register" %}' style="text-decoration: none; color: midnightblue;">Register</a></p>
   </form>
 
   </div>
