--- a/manager/templates/sellform.html
+++ b/manager/templates/sellform.html
@@ -87,7 +87,7 @@ padding-bottom: 10px;
 
 
   <div class="container d-flex justify-content-center" style="margin-top: 5%;">
-    <div class="card" style="border-width: 2px; border-color: brown; ">
+    <div class="card" style="border-width: 2px; border-color: midnightblue; ">
         <div class="card-header"><h1>Summary</h1></div>
         <div class="card-body d-flex justify-content-center ">
             <table class="table-sm table-hover">
@@ -124,7 +124,7 @@ padding-bottom: 10px;
         <a href='{% url "dashboard" %}'><button class="btn btn-outline-danger" style="border-width: 2px;" type="submit">Cancel</button></a>
         <form method="POST" action='{% url "sellform" %}'>
           {% csrf_token %}
-        <a href="" style= "margin-left: 5%;" ><input class="btn btn-outline" style="border-width: 2px; border-color: brown;" type="submit" value="Confirm"></a>
+        <a href="" style= "margin-left: 5%;" ><input class="btn btn-outline" style="border-width: 2px; border-color: midnightblue;" type="submit" value="Confirm"></a>
     </form>
     </div>
     </div>
